# Machina

./: .bazelrc  .bazelversion  .gitignore  .pylintrc  .zenodo.json  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  WORKSPACE  configure.py  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_9.txt
.github/: bot_config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: tensorflow_issue_template.yaml  tflite-converter-issue.md  tflite-other.md
.github/workflows/: arm-cd.yml  arm-ci-extended-cpp.yml  arm-ci-extended.yml  arm-ci.yml  cffconvert.yml  issue-on-pr-rollback.yml  osv-scanner-scheduled.yml  pylint-presubmit.yml  release-branch-cherrypick.yml  scorecards-analysis.yml  stale-issues.yml  update-nightly.yml  update-rbe.yml
machina/: BUILD  __init__.py  api_template.__init__.py  api_template_v1.__init__.py  compat_template.__init__.py  compat_template_v1.__init__.py  opensource_only.files  pytype.default.bzl  strict.default.bzl  tensorflow.bzl  tensorflow.default.bzl  tf_exported_symbols.lds  tf_version.bzl  tf_version_script.lds  virtual_root_template_v1.__init__.py  virtual_root_template_v2.__init__.py  workspace0.bzl  workspace1.bzl  workspace2.bzl  workspace3.bzl
machina/c/: BUILD  README.md  c_api.cc  c_api.h  c_api_experimental.cc  c_api_experimental.h  c_api_experimental_test.cc  c_api_function.cc  c_api_function_test.cc  c_api_internal.h  c_api_macros.h  c_api_macros_internal.h  c_api_test.cc  c_op_requires.h  c_test.c  c_test_util.cc  c_test_util.h  checkpoint_reader.cc  checkpoint_reader.h  conversion_macros.h  env.cc  env.h  env_test.cc  generate-pc.sh  kernels.cc  kernels.h  kernels_experimental.cc  kernels_experimental.h  kernels_test.cc  logging.cc  logging.h  ops.cc  ops.h  ops_test.cc  python_api.cc  python_api.h  safe_ptr.cc  safe_ptr.h  tensor_interface.h  test_op.cc  (+24 more)
machina/cc/: BUILD
machina/codira/: CMakeLists.txt  Dockerfile  Package.code
machina/codira/Sources/CMachina/: CMachina.c  CMakeLists.txt
machina/codira/Sources/CMachina/include/: CMachina.h  module.modulemap
machina/codira/Sources/Machina/: BackwardsCompatibility.code  CMakeLists.txt  Context.code  Exports.code  Freezable.code  Initializers.code  Layer.code  Loss.code  StdlibExtensions.code
machina/codira/Sources/Machina/Bindings/: EagerExecution.code  EagerExecution.codira.gyb  README.md  RawOpsAugmented.code  RawOpsDispatching.code  RawOpsGenerated.code  TFTensorOperation.code  generate_wrappers.py
machina/codira/Sources/Machina/Core/: ArrayOps.code  BroadcastingPullback.code  CopyableToDevice.code  DataTypes.code  DifferentialOperators.code  ElementaryFunctions.code  EuclideanDifferentiable.code  Execution.code  KeyPathIterable.code  LazyTensorContext.code  LazyTensorOperation.code  LazyTensorShapeInference.code  LazyTensorTFFunctionBuilder.code  LazyTensorTrace.code  LazyTensorTraceCache.code  MixedPrecision.code  PointwiseMultiplicative.code  PythonConversion.code  Runtime.code  ShapedArray.code  StringTensor.code  Tensor.code  TensorGroup.code  TensorHandle.code  TensorShape.code  Threading.code  Utilities.code  VectorProtocol.code
machina/codira/Sources/Machina/Epochs/: Algorithms.code  Backend.code  Collatable.code  NonuniformTrainingEpochs.code  Sampling.code  Slices.code  TrainingEpochs.code
machina/codira/Sources/Machina/Layers/: Convolutional.code  Core.code  Dense.code  Dropout.code  Embedding.code  Initialization.code  Morphological.code  Normalization.code  Pooling.code  Recurrent.code  Sequential.code  Sequential.codira.gyb  Upsampling.code
machina/codira/Sources/Machina/Operators/: Basic.code  Comparison.code  Dataset.code  Image.code  LinearAlgebra.code  Math.code  NN.code
machina/codira/Sources/Machina/Optimizers/: MomentumBased.code  Optimizer.code  SGD.code
machina/codira/Sources/Machina/X10/: Device.code  RawOpsXLAGenerated.code  XLAScalarType.code  XLATensor.code
machina/codira/Sources/Machina/X10/APIs/: CrossReplicaSum.code  DeviceScope.code  RawOpsManual.code
machina/codira/Tests/: CMakeLists.txt  LinuxMain.code
machina/codira/Tests/AnnotationTests/: CMakeLists.txt  TFEagerTests.code  XLATests.code
machina/codira/Tests/ExperimentalTests/: CMakeLists.txt  ComplexTests.code  XCTestManifests.code
machina/codira/Tests/MachinaTests/: CMakeLists.txt  CollectionTesting.code  ContextTests.code  EpochsTests.code  FreezableTests.code  Helpers.code  InitializerTests.code  KeyPathIterableTests.code  LayerTests.code  LazyTensorEvaluationTests.code  LazyTensorExplicitTraceTests.code  LazyTensorHandleTests.code  LazyTensorOperationTests.code  LazyTensorShapeInferenceTests.code  LazyTensorTFFunctionBuilderTests.code  LazyTensorTestHelper.code  LazyTensorTraceCacheTests.code  LazyTensorTraceTests.code  LossTests.code  OptimizerTests.code  RuntimeTests.code  SamplingTests.code  SequencedTests.code  SequencedTests.code.gyb  SequentialTests.code  SequentialTests.code.gyb  SlicesTests.code  TensorAutoDiffTests.code  TensorGroupTests.code  TensorTests.code  TrivialModelTests.code  XCTestManifests.code
machina/codira/Tests/MachinaTests/OperatorTests/: BasicTests.code  ComparisonTests.code  ImageTests.code  LinearAlgebraTests.code  MathTests.code  MatrixTests.code  NNTests.code
machina/codira/Tests/SILTests/: BitcodeTests.code  BitsTests.code  BitstreamTests.code  DescriptionTests.code  InstructionTests.code  ModuleTests.code  PrinterTests.code  Process.code  SExprTests.code  SILAnalysisTests.code  SILParserTests.code  TemporaryFile.code
machina/codira/Tests/SILTests/Resources/: AddFloat.code  AvgPool1D.code  AvgPool1D.sil  Example.sexpr
machina/codira/Tests/TensorTests/: CMakeLists.txt  PRNGTests.code  UtilitiesTests.code  XCTestManifests.code
machina/codira/Tests/x10/: CMakeLists.txt  TensorVisitorPlanTest.code  keypathiterable_test.code  ops_test.code  xla_tensor_test.code
machina/core/: BUILD  build_defs.bzl
machina/dtensor/: BUILD  (+1 more)
machina/tools/pip_package/redundant_tensorflow_gpu/: README.md  setup.cfg  setup.py
tools/: tf_env_collect.sh
(+23455 files in other folders)
