add_library(MachinaTests
  CollectionTesting.codira
  ContextTests.codira
  EpochsTests.codira
  FreezableTests.codira
  Helpers.codira
  InitializerTests.codira
  KeyPathIterableTests.codira
  LayerTests.codira
  LazyTensorEvaluationTests.codira
  LazyTensorExplicitTraceTests.codira
  LazyTensorHandleTests.codira
  LazyTensorOperationTests.codira
  LazyTensorShapeInferenceTests.codira
  LazyTensorTestHelper.codira
  LazyTensorTFFunctionBuilderTests.codira
  LazyTensorTraceCacheTests.codira
  LazyTensorTraceTests.codira
  LossTests.codira
  OptimizerTests.codira
  RuntimeTests.codira
  SamplingTests.codira
  SequencedTests.codira
  SequencedTests.codira.gyb
  SequentialTests.codira
  SequentialTests.codira.gyb
  SlicesTests.codira
  TensorAutoDiffTests.codira
  TensorGroupTests.codira
  TensorTests.codira
  TrivialModelTests.codira
  XCTestManifests.codira

  OperatorTests/BasicTests.codira
  OperatorTests/ComparisonTests.codira
  OperatorTests/ImageTests.codira
  OperatorTests/LinearAlgebraTests.codira
  OperatorTests/MathTests.codira
  OperatorTests/MatrixTests.codira
  OperatorTests/NNTests.codira)
target_link_libraries(MachinaTests PUBLIC
  CMachina
  Machina
  Tensor
  XCTest)
target_compile_definitions(MachinaTests PRIVATE
  $<$<BOOL:${TENSORFLOW_USE_STANDARD_TOOLCHAIN}>:TENSORFLOW_USE_STANDARD_TOOLCHAIN>
  )
